= 1.2 = * NEW Feature - Widget alignment ( left, center, right ) * NEW Feature - Adjust spacing between text * NEW Social Icon - (Stack Exchange) * Fixed - Website field not appearing on widget
git-svn-id: https://plugins.svn.wordpress.org/personal-contact-info-widget/trunk@1096778 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -56,3 +56,7 @@
 body .ui-tooltip {
 	border-width: 2px;
 }
+
+.jsjr-pci-accordion hr + p > label {
+	font-weight:bold;
+}
