--- a/css/wp-styles.css
+++ b/css/wp-styles.css
@@ -1,5 +1,12 @@
-.jsjr-pci-photo {
+.widget_jsjr_personal_contact_info ul {
+	list-style-type:none;
+}
 
+.widget_jsjr_personal_contact_info span {
+	display:block;
+}
+
+.jsjr-pci-photo {
 }
 
 .jsjr-pci-photo-thumbnail {
@@ -20,93 +27,41 @@
 }
 
 .jsjr-pci-contact-section {
-	text-align:center;
+
 }
 
 .jsjr-pci-name {
-
 }
 
 .jsjr-pci-slogan {
-	font-size:17px;
+
 }
 
-.jsjr-pci-social-icons {
+.jsjr-pci-social-icons a{
 	font-size:35px;
 	letter-spacing:5px;
+	text-decoration:none;
 }
 
 .jsjr-pci-email {
 	
 }
 
+.jsjr-pci-email:before{
+	font-family: "FontAwesome";
+	content: "\f0e0  ";
+}
+
 .jsjr-pci-phone {
-	font-size:20px;
+
+}
+
+.jsjr-pci-phone:before{
+	font-family: "FontAwesome";
+	content: "\f095  ";
 }
 
 .jsjr-pci-question {
 	border:1px solid #DDD;
 	padding:3px;
-}
-
-/*==================================================
-             Bootstrap 3 Media Queries     
-xs (<768px)
-sm (>768px)
-md (>992px)
-lg (>1200px)
-==================================================*/
-
-/*==========  Mobile First Method  ==========*/
-
-/* Custom, iPhone Retina */ 
-@media only screen and (min-width : 320px) {
-    
-}
-
-/* Extra Small Devices, Phones */ 
-@media only screen and (min-width : 480px) {
-
-}
-
-/* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
-
-}
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-
-}
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-
-}
-
-/*==========  Non-Mobile First Method  ==========*/
-
-/* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px) {
-
-}
-
-/* Medium Devices, Desktops */
-@media only screen and (max-width : 992px) {
-
-}
-
-/* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
-
-}
-
-/* Extra Small Devices, Phones */ 
-@media only screen and (max-width : 480px) {
-
-}
-
-/* Custom, iPhone Retina */ 
-@media only screen and (max-width : 320px) {
-    
 }
